--- a/index.html
+++ b/index.html
@@ -13,28 +13,42 @@
             margin: 0;
             padding: 0;
         }
-        h1 {
-            color: red;
-        }
         .container {
             padding: 20px;
         }
         .profile-img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
+            width: 100%;
+            max-width: 600px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
         }
         .social-links {
             margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
         }
         .social-links a {
-            display: inline-block;
-            margin: 10px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-decoration: none;
+            color: white;
+            font-size: 18px;
+            padding: 10px;
+            border-radius: 5px;
+            width: 200px;
+            background-color: rgba(255, 255, 255, 0.1);
+            transition: 0.3s;
+        }
+        .social-links a:hover {
+            background-color: rgba(255, 255, 255, 0.2);
         }
         .social-links img {
-            width: 40px;
-            height: 40px;
+            width: 30px;
+            height: 30px;
         }
         .footer {
             margin-top: 50px;
@@ -49,23 +63,26 @@
         <h1>Hallo I'm Gxyenn</h1>
         <p>Kandidat Pemula Creator Pemula<br>I'm Gxyenn</p>
 
-        <img src="https://files.catbox.moe/877s7g.png" alt="Profile Picture" class="profile-img">
+        <!-- Foto Utama -->
+        <img src="https://files.catbox.moe/dxwhcj.png" alt="Profile Picture" class="profile-img">
 
+        <!-- Link Sosial Media Berurutan ke Bawah -->
         <div class="social-links">
             <a href="https://github.com/Gxyenn" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub"> GitHub
             </a>
             <a href="https://github.com/Gxyenn/XLESYVIP" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" alt="Script Bot WA">
+                <img src="https://cdn-icons-png.flaticon.com/512/733/733609.png" alt="Script Bot WA"> Script Bot WA
             </a>
             <a href="https://youtube.com/@GxyenDev" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
+                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"> YouTube
             </a>
             <a href="https://whatsapp.com/channel/0029Vap5nJh2UPBDIc9bja1s" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp Channel">
+                <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp Channel"> WhatsApp Channel
             </a>
         </div>
 
+        <!-- Footer -->
         <div class="footer">
             <a href="https://wa.me/6283877636168" style="color: white; text-decoration: none;">ContactDev</a>
         </div>
