--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
             padding: 20px;
         }
         .profile-img {
-            width: 100%;
-            max-width: 600px;
+            width: 80%;
+            max-width: 500px;
             height: auto;
             display: block;
-            margin: 0 auto;
+            margin: 40px auto 20px auto;
+            border-radius: 20px; /* Sudut sedikit melengkung */
         }
         .social-links {
-            margin-top: 20px;
+            margin-top: 40px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -37,11 +38,12 @@
             text-decoration: none;
             color: white;
             font-size: 18px;
-            padding: 10px;
-            border-radius: 5px;
-            width: 200px;
+            padding: 12px 20px;
+            border-radius: 10px;
+            width: 250px;
             background-color: rgba(255, 255, 255, 0.1);
             transition: 0.3s;
+            justify-content: center;
         }
         .social-links a:hover {
             background-color: rgba(255, 255, 255, 0.2);
@@ -52,17 +54,19 @@
         }
         .footer {
             margin-top: 50px;
-            font-size: 12px;
-            opacity: 0.6;
+            font-size: 14px;
+            opacity: 0.8;
+        }
+        .footer a {
+            color: red;
+            text-decoration: none;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Hallo I'm Gxyenn</h1>
-        <p>Kandidat Pemula Creator Pemula<br>I'm Gxyenn</p>
-
         <!-- Foto Utama -->
         <img src="https://files.catbox.moe/dxwhcj.png" alt="Profile Picture" class="profile-img">
 
@@ -77,16 +81,4 @@
             <a href="https://youtube.com/@GxyenDev" target="_blank">
                 <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube"> YouTube
             </a>
-            <a href="https://whatsapp.com/channel/0029Vap5nJh2UPBDIc9bja1s" target="_blank">
-                <img src="https://cdn-icons-png.flaticon.com/512/124/124034.png" alt="WhatsApp Channel"> WhatsApp Channel
-            </a>
-        </div>
-
-        <!-- Footer -->
-        <div class="footer">
-            <a href="https://wa.me/6283877636168" style="color: white; text-decoration: none;">ContactDev</a>
-        </div>
-    </div>
-
-</body>
-</html>
+            <a href="https://whatsapp.com/channel/0029Vap5nJh2UPBDIc9b
