--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Loading Screen -->
     <div id="loading-screen">
-        <img src="https://via.placeholder.com/100" alt="Gxyenn Logo" class="profile-pic">
+        <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Gxyenn Logo" class="profile-pic">
         <h1>Gxyenn Store</h1>
         <p>Store Aman Dan Terpercaya</p>
         <p class="loading-text">Loading...</p>
@@ -19,7 +19,7 @@
     <!-- Main Content -->
     <div id="main-content" style="display: none;">
         <header>
-            <img src="https://via.placeholder.com/100" alt="Gxyenn Assistant" class="profile-pic">
+            <img src="https://files.catbox.moe/j6x9zj.jpg" alt="Gxyenn Assistant" class="profile-pic">
             <h1>Gxyenn Assistant</h1>
             <p>Ai Assistant By Gxyenn</p>
         </header>
@@ -50,4 +50,4 @@
         };
     </script>
 </body>
-    </html>
+</html>
